# animal_recognition_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: models.py  routes.py
app/application/: __init__.py  animal_service.py
app/domain/: entities.py
app/infrastructure/: clip_model.py  image_processor.py  ollama_client.py  qdrant_client.py
app/scripts/: populate_qdrant.py
app/services/: animal_recognition.py
app/utils/: exceptions.py  translations.py
data/animals-10/: embeddings_cache.pkl
templates/: index.html
tests/: conftest.py  pytest.ini  test_animal_recognition.py  test_animal_service.py  test_docs.py  test_exceptions.py  test_image_processor.py  test_models.py  test_routes.py  test_translations.py
